--- a/src/components/header/tab/index.module.scss
+++ b/src/components/header/tab/index.module.scss
@@ -1,9 +1,9 @@
 .text {
     cursor: pointer;
-    transition: 0.2s;
+    transition: 0.5s;
     border-bottom: 2px solid transparent;
 }
 
 .text:hover {
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid white;
 }
