--- a/src/app/[lng]/index.module.scss
+++ b/src/app/[lng]/index.module.scss
@@ -4,8 +4,7 @@
     .main-card-background {
         width: calc(var(--mainWidth) * 1px);
         height: calc(var(--mainHeight) * 1px);
-        zoom: var(--mainZoom);
-        object-fit: cover;
+        zoom: 0.5;
         border: 4px solid #6e64ff;
         border-radius: 25px;
         box-shadow: 0 0 20px #ffffff;
