--- a/src/app/[lng]/index.module.scss
+++ b/src/app/[lng]/index.module.scss
@@ -3,8 +3,10 @@
 
     .main-card-background {
         width: calc(var(--mainWidth) * 1px);
-        height: calc(var(--mainHeight) * 1px);
-        transform: scale(var(--mainZoom));
+        // height: calc(var(--mainHeight) * 1px);
+        height: auto;
+        aspect-ratio: 20 / 9;
+        zoom: var(--mainZoom);
         border: 4px solid #6e64ff;
         border-radius: 25px;
         box-shadow: 0 0 20px #ffffff;
