--- a/src/components/languageSwitcher/index.module.scss
+++ b/src/components/languageSwitcher/index.module.scss
@@ -2,6 +2,7 @@
     :global {
         .ant-dropdown-menu {
             background-color: #00000000 !important;
+            border: 2px solid #542099;
         }
 
         .ant-dropdown-menu-title-content {
